# epyrtools

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  GIF_USAGE.md  README.md  fix_voigt_calls.py  pyproject.toml  requirements.txt  run_deep_tests.py  setup.py
docs/: README.md  api_reference.md  changelog.rst  cli_reference.md  conf.py  configuration_system.md  contributing.rst  index.rst  plugin_system.md
docs/_build/doctrees/: index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: epyr.rst
epyr/: __init__.py  cli.py  constants.py  eprload.py  eprplot.py  fair.py  fair_original_backup.py  isotope_gui.py  plot.py
epyr/baseline/: _1d.py  _2d.py  __init__.py  _utils.py
epyr/fair/: __init__.py  conversion.py  data_processing.py
epyr/lineshapes/: __init__.py  lineshape_class.py
epyr/sub/: baseline2.py  loadBES3T.py  loadESP.py  processing2.py  utils.py
examples/: README.md
examples/data/: 2020_10_DMTTFBr_T2EH_28dB_6K_20ns_40ns_hperpc.DSC  2020_10_DMTTFBr_T2EH_28dB_6K_20ns_40ns_hperpc.DTA  20210508_DMTTFI_T2EH_5p8K_10dB_20_26ns_hperpc.DSC  20210508_DMTTFI_T2EH_5p8K_10dB_20_26ns_hperpc.DTA  2024_08_CaWO4171Yb_rabi_6K_6724G_18dB.DSC  2024_08_CaWO4171Yb_rabi_6K_6724G_18dB.DTA  CuSO4_001.spc  Rabi2D_GdCaWO4_13dB_3057G.DSC  Rabi2D_GdCaWO4_6dB_3770G_2.DSC
examples/data/BES3T/: README.md
examples/data/exported/: 2014_03_19_MgO_300K_111_fullrotation33dB_full_2D.npz
examples/notebooks/: 01_Basic_Loading.ipynb  01_Getting_Started.ipynb  02_Baseline_Correction.ipynb  03_Advanced_Analysis.ipynb  03_Advanced_Analysis_backup.ipynb  04_EPR_Lineshape_Analysis.ipynb  05_Data_Loading_Functions_Complete_v2.ipynb  12_Simplified_Baseline_Correction.ipynb  14_Baseline_Correction_Real_Bruker_Data.ipynb  15_Complete_Baseline_Correction_Guide.ipynb  EPR_Data_Loading_Simple.ipynb  EPR_Lineshapes_Simple.ipynb  README.md  tester.ipynb
examples/scripts/: 01_basic_loading.py  02_baseline_correction.py
notebooks/: Demo_baseline_correction.ipynb
tests/: 2014_03_19_MgO_300K_111_fullrotation33dB.spc  test.DTA  test_core_functionality.py
(+34 files in other folders)
