[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "epyr-tools"
version = "0.1.0"
description = "Electron Paramagnetic Resonance (EPR) Tools in Python"
readme = "README.md"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Sylvain Bertaina", email = "sylvain.bertaina@cnrs.fr"}
]
maintainers = [
    {name = "Sylvain Bertaina", email = "sylvain.bertaina@cnrs.fr"}
]
keywords = ["EPR", "electron paramagnetic resonance", "spectroscopy", "Bruker", "data analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
    "h5py>=3.1.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.812",
    "pre-commit>=2.10.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/BertainaS/epyrtools"
Repository = "https://github.com/BertainaS/epyrtools.git"
Issues = "https://github.com/BertainaS/epyrtools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["epyr*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=epyr --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
